# 42sh

./: AUTHORS  README.md  meson.build
src/: main.c
src/builtins/: builtins.h  cd.c  echo.c  exit.c
src/exec/: builtins.h  exec.c  exec.h
src/io/: stream.c  stream.h
src/lexer/: a.out  lexer.c  lexer.h  lexer_utils.c  lexer_utils.h  token.c  token.h
src/parser/: and_or.c  ast.h  command.c  command_list.c  compound_list.c  for.c  if_command.c  parser.c  parser.h  parser1.h  parser2.h  parser2bis.h  parser3.h  pipe.c  simple_command.c  until.c  while.c
